.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
21:15:04 **** Incremental Build of configuration Debug for project EX1 ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:96:21: error: 'LED_RED_GPIO_Port' undeclared (first use in this function)
   96 |   HAL_GPIO_WritePin(LED_RED_GPIO_Port, LED_RED_GPIO_Pin, SET);
      |                     ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:96:21: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:96:40: error: 'LED_RED_GPIO_Pin' undeclared (first use in this function)
   96 |   HAL_GPIO_WritePin(LED_RED_GPIO_Port, LED_RED_GPIO_Pin, SET);
      |                                        ^~~~~~~~~~~~~~~~
../Core/Src/main.c:101:22: error: 'LED_YELLOW_GPIO_Port' undeclared (first use in this function)
  101 |    HAL_GPIO_WritePin(LED_YELLOW_GPIO_Port, LED_YELLOW_GPIO_Pin, SET);
      |                      ^~~~~~~~~~~~~~~~~~~~
../Core/Src/main.c:101:44: error: 'LED_YELLOW_GPIO_Pin' undeclared (first use in this function)
  101 |    HAL_GPIO_WritePin(LED_YELLOW_GPIO_Port, LED_YELLOW_GPIO_Pin, SET);
      |                                            ^~~~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.
